add the tp2 function for microbit v1.5 / v2

--- a/_locales/ja/stem-strings.json
+++ b/_locales/ja/stem-strings.json
@@ -11,6 +11,7 @@
     "stem.gtTemperatureHigh|block": "%temperatureThreshold|℃より%settingHotOrCold|",
     "stem.isMove|block": "micro:bitが動いた",
     "stem.getDistance|block": "距離[cm]",
+    "stem.TP2_getTemperature|block": "温度[℃] (TP2)",
     "stem.getTemperature|block": "温度[℃] (EN1)",
     "stem.getHumidity|block": "湿度[\\%]",
     "stem.getPressure|block": "気圧[hPa]",
